--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
-    name = django_cityloc_pkg
+    name = django_cityloc_pkg_Charles_Battle
+
     version = 0.0.1
     description = A Django app about city locations
     author = Author Name
